--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "lodash": "^4.17.21",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
     "rangy": "^1.3.1",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "styled-components": "^5.3.8",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -46,6 +48,8 @@
     ]
   },
   "devDependencies": {
-    "@types/rangy": "^0.0.34"
+    "@types/lodash": "^4.14.194",
+    "@types/rangy": "^0.0.34",
+    "@types/styled-components": "^5.1.26"
   }
 }
